Fix gap error

--- a/frontend/gnosity/src/components/style/questCard.css
+++ b/frontend/gnosity/src/components/style/questCard.css
@@ -53,4 +53,5 @@
   font-weight: 700;
   font-size: 16px;
   padding: 5px 10px;
+  margin-right: 6px;
 }
