--- a/frontend/gnosity/src/components/style/questModal.css
+++ b/frontend/gnosity/src/components/style/questModal.css
@@ -49,7 +49,7 @@
 .tags-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
+  gap: 15px;
   align-items: center;
   font-size: 17px;
 }
